# noob_Crypto_analysis

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
notebooks/: 01_workspace_setup.ipynb
src/: __init__.py  config.py
src/analysis/: __init__.py  metrics.py  plots.py
src/backtest/: __init__.py  baseline.py  engine.py
src/data_pipeline/: __init__.py  cleaning.py
src/data_sources/: __init__.py  binance.py  coingecko.py
src/features/: __init__.py  indicators.py
src/strategies/: __init__.py  combined.py  ma_crossover.py  rsi_reversion.py
tests/: smoke_test.py  test_backtest_engine.py  test_indicators.py
